--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@
 body {
    font-family: "Segoe UI", sans-serif;
    background-color: #d1d1d1;
+   overflow: hidden;
 }
